--- a/css/anotherPage.css
+++ b/css/anotherPage.css
@@ -11,9 +11,9 @@
 .head{
     padding: 50px;
     /* background: linear-gradient(#CF6679,#000); */
-    background:linear-gradient(#000,#EF5350);
     /* background-repeat: no-repeat;
     background-size: cover; */
+    background:linear-gradient(#EF5350,black);
     color: white;
 }
 
@@ -160,6 +160,52 @@ ul.newlink{
     word-spacing: 5px;
    
 }
+/* responsive-tab */
 
-
+@media only screen and (max-width:768px){
+    .body{
+        background-color: black;
+        width: 100%;
+        height: 100%;
+        /* margin: 0 -20px 0 -20px; */
+    }
+    .white{
+        width: 93.5%;
+        margin: 0 25px 0 25px;
+        height: 750px;
+    }
+    .left{
+        float: left;
+        width: 70%;
+        height: 100%;
+        margin:10px 15px 10px 15px;
+        padding:0;
+        
+    }
+    .right{
+        background-color:rgba(192, 190, 190, 0.349);
+        float:right;
+        width: 25%;
+        height: 96%;
+        border-left: 1px solid rgba(192, 190, 190, 0.349);
+        margin-left: -150px;
+        position: relative;
+        left: -3px;
+        
+    }
+    .size{
+        width: 90px;
+        padding-left: 0 0 0 0 ;
+        margin: 0;
+    }
+    .searching{
+     width: 30px;
+        position: relative;
+        top:10px;
+        left: 30px;
+        padding: 0;
+        margin: 0;
+    
+    }
+}
 
