--- a/css/example.css
+++ b/css/example.css
@@ -9,7 +9,7 @@
 /* heading */
 .head{
     padding: 50px;
-    background:linear-gradient(#000,#EF5350);
+    background:linear-gradient(#EF5350,black);
     color: white;
 }
 h1.head,h1:hover{
@@ -49,6 +49,8 @@ a.navbar,a:hover{
 .body{
     background-color: black;
     color: white;
+    height: 100%;
+    width: 100%;
 }
 .white{
     background-color: white;
@@ -293,4 +295,65 @@ input.searching{
     font-size: 11px;
     word-spacing: 5px;
    
+}
+/* responsive-tab */
+@media only screen and (max-width:768px){
+    .body{
+        background-color: black;
+        width: 100%;
+        height: 100%;
+    }
+    .white{
+        width: 93.5%;
+        margin: 0 25px 0 25px;
+        height: 2000px;
+    }
+    .left{
+        float: left;
+        width: 70%;
+        height: 100%;
+        margin:10px 15px 10px 15px;
+        padding:0;
+        
+    }
+    .right{
+        background-color:rgba(192, 190, 190, 0.349);
+        float:right;
+        width: 25%;
+        height: 96%;
+        border-left: 1px solid rgba(192, 190, 190, 0.349);
+        margin-left: -150px;
+        position: relative;
+        left: -3px;
+        
+    }
+    
+    table{
+        width: 470px;
+    }
+    .img1{
+        width: 100px;
+    }
+    .img2{
+        margin-left: 150px;
+        width: 100px;
+    }
+    .img3{
+        margin-left: 380px;
+        width: 100px;
+    }
+    input.size{
+        width: 90px;
+        padding-left: 0 0 0 0 ;
+        margin: 0;
+    }
+    .searching{
+     width: 30px;
+        position: relative;
+        top:10px;
+        left: 30px;
+        padding: 0;
+        margin: 0;
+    
+    }
 }
